# hpm_apps

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_zh.md  VERSION  hpmapp.sh
apps/: hardware_en.md  (+5 more)
apps/adc/software/adc16_sinad/: CMakeLists.txt  README.md  README_zh.md
apps/adc/software/adc16_sinad/src/: sinad.c
apps/bootrom_ota/software/uart_ota/: CMakeLists.txt
apps/bootrom_ota/software/uart_ota/inc/: uart_xmodem.h
apps/ecat_master_motor_control/software/: CMakeLists.txt
apps/ecat_master_motor_control/software/inc/: FreeRTOSConfig.h  cia402_def.h  data_common.h  ec_config.h  lv_app_conf.h  motor_control.h
apps/ecat_master_motor_control/software/src/: main.c  motor_control.c
apps/ecat_master_motor_control/software/ui/: ui.c  ui.h  ui_gen.c  ui_gen.h
apps/enet_connect_tsn/software/: CMakeLists.txt  FreeRTOSConfig.h  lwipopts_app.h  main.c
apps/enet_connect_tsn/software/apps/: app_enet_tsn.c  app_enet_tsn.h  app_misc.c  app_misc.h  app_mq.c  app_mq.h  app_mq_msg.h  app_tcp.c  app_tcp.h  app_thread.c  app_thread.h  app_udp.c  app_udp.h  app_usb.c  app_usb.h
apps/enet_connect_tsn/software/drivers/: drv_key.c  drv_key.h  drv_led.c  drv_led.h  drv_log.c  drv_log.h  drv_oled.c  drv_oled.h  drv_oled_font.h
apps/ethercat_master/software/: CMakeLists.txt
apps/ethercat_master/software/barebone/: CMakeLists.txt
apps/ethercat_master/software/barebone_cia402/: CMakeLists.txt
apps/ethercat_master/software/barebone_digitalio/: CMakeLists.txt
apps/ethercat_master/software/common/: ethercat_common.c  ethercat_common.h
apps/ethercat_master/software/freertos/: CMakeLists.txt
apps/ethercat_master/software/freertos_cia402/: CMakeLists.txt
apps/ethercat_master/software/freertos_digitalio/: CMakeLists.txt
apps/ethercat_master/software/inc/: FreeRTOSConfig.h  ec_config.h
apps/ethercat_master/software/src/: main.c
apps/femc_8080lcd/software/: CMakeLists.txt
apps/femc_8080lcd/software/src/: lcd8080.c  lcd8080.h
apps/gateway_device/software/: CMakeLists.txt  shell.h
apps/gateway_device/software/apps/: gw_can.c  gw_can.h  gw_misc.c  gw_misc.h  gw_mq.h  gw_mq_msg.h  gw_thread.c  gw_thread.h  gw_usb.h
apps/gateway_device/software/drivers/: drv_led.c  drv_led.h  drv_mcan.c  drv_segment.c  drv_segment.h
apps/gateway_ecat2can/software/: CMakeLists.txt  FreeRTOSConfig.h  csh_config.h  ecat_config.h  main.c  usb_config.h  user_config.h
apps/gateway_ecat2can/software/apps/: gw_can.c  gw_can.h  gw_misc.c  gw_misc.h  gw_mq.c  gw_mq_msg.h  gw_thread.c  gw_thread.h  gw_usb.c
apps/gateway_ecat2can/software/drivers/: drv_led.c  drv_led.h  drv_mcan.c  drv_mcan.h
apps/gateway_ecat_master/software/: CMakeLists.txt  FreeRTOSConfig.h  ec_config.h  ec_eeprom.h  lv_app_conf.h  main.c  usb_config.h
apps/gateway_ecat_master/software/apps/: gw_can.h  gw_ecat_master.c  gw_ecat_master.h  gw_lcd.c  gw_lcd.h  gw_misc.c  gw_misc.h  gw_mq.c  gw_mq.h  gw_mq_msg.h  gw_thread.c  gw_thread.h  gw_usb.c  gw_usb.h
apps/gateway_ecat_master/software/drivers/: drv_key.c  drv_key.h  drv_lcd.c  drv_lcd.h  drv_lcd_font.h  drv_led.c
apps/hpm6750combo_demos/software/hello_world_xpi1/: CMakeLists.txt  hpm6750_combo.cfg
apps/hpm6750combo_demos/software/multi_net/: CMakeLists.txt  app.yaml
apps/hpm_monitor/software/: CMakeLists.txt
apps/hpm_monitor/software/inc/: monitor_config.h
apps/hpm_monitor/software/src/: main.c
apps/i2s_dma_chain/software/i2s_dma/: CMakeLists.txt
apps/led_screen/software/led_ucs1903/: CMakeLists.txt
apps/lib_demo/software/: CMakeLists.txt
apps/lib_demo/software/src/: libcmdtest.c  libcmdtest.h
apps/monitor_adc/software/hpm_monitor/: CMakeLists.txt
apps/mp_adapte/software/power_core/: CMakeLists.txt  mp_config.h
apps/nor_flash/: CMakeLists.txt  README_en.md  README_zh.md  app.yaml
apps/nor_flash/common/port/: hpm_serial_nor_host_port.c  hpm_serial_nor_host_port.h
apps/nor_flash/doc/doxygen/: Doxyfile_en  Doxyfile_zh
apps/nor_flash/src/: main.c
apps/ota/software/bootuser/: CMakeLists.txt
apps/ota/software/user_app/: CMakeLists.txt
apps/otav2/software/bootuser/: CMakeLists.txt  app.yaml
apps/otav2/software/user_app/: CMakeLists.txt  app.yaml
apps/pmsm_53/software/: CMakeLists.txt
apps/pmsm_53/software/debug/: debug_profile.c  debug_profile.h  debug_task.c  debug_task.h  hpm_ticktime.c  hpm_ticktime.h
apps/pmsm_53/software/inc/: debug_config.h  monitor_config.h
apps/pmsm_53/software/src/: bldc_foc_callback.c  bldc_foc_callback.h  parm_global.c  parm_global.h  pmsm.c  pmsm.h  pmsm_currentctrl.c  pmsm_currentctrl.h  pmsm_init.c  pmsm_init.h  pmsm_speedctrl.c  pmsm_speedctrl.h  wr_eeprom.c  wr_eeprom.h
apps/pmsm_four_axis_62/software/: CMakeLists.txt
apps/pmsm_four_axis_62/software/src/: bldc_foc_callback.c  bldc_foc_callback.h  command_process.c  command_process.h  monitor_config.h  parm_global.h  pmsm.c  pmsm_currentctrl.c  pmsm_currentctrl.h  pmsm_init.c  pmsm_init.h  pmsm_speedctrl.c  pmsm_speedctrl.h  usb_config.h
apps/soft_rdc/software/: CMakeLists.txt
apps/soft_rdc/software/src/: adc_data_process.c  adc_data_process.h  adc_dma.c  adc_dma.h  pwm_dma.c  pwm_dma.h  rdc_soft.c
apps/web_server/web_server/: CMakeLists.txt
apps/web_server/web_server/config/: FreeRTOSConfig.h  mongoose_config.h  rtconfig.h  usb_config.h
apps/web_server/web_server/src/: button.c  button.h  cdc_rndis_device.c  cdc_rndis_device.h  main.c  net.c  net.h  packed_fs.c  tasks.c  tasks.h
middleware/hpm_ota/: CMakeLists.txt  README_en.md  README_zh.md
middleware/hpm_ota/core/: hpm_appheader.c  hpm_diffconfig.h  hpm_diffmgr.c  hpm_lzma.c  hpm_ota.c
middleware/hpm_ota/core/bsdiff/: bspatch.c  bspatch.h  vFile.c
middleware/hpm_ota/core/lzma/: lzma_decompress.c
middleware/hpm_ota/doc/doxygen/: Doxyfile_en  Doxyfile_zh
middleware/hpm_ota/inc/: hpm_appheader.h  hpm_dflashmap.h  hpm_diffmgr.h  hpm_flash.h  hpm_groupsplit.h  hpm_log.h  hpm_lzma.h  hpm_ota.h  ota_kconfig.h  ota_port.h
middleware/hpm_ota/port/: CMakeLists.txt  hpm_flash.c  hpm_hashs.c
middleware/hpm_ota/port/ecat/: ecat_config.h  ecat_foe.c  ecat_foe_support.c
(+1234 files in other folders)
